make for mobile sesponsive card

--- a/wegofin.html
+++ b/wegofin.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <title>Card UI</title>
     <link rel="stylesheet" href="wegofin.css" />
   </head>
   <body>
     <h1>What User says</h1>
     <h3>
-      Testimonials that speak louder than words! Customer stories that light up
-      our day.
+      Testimonials that speak louder than words! Customer stories that light up our day.
     </h3>
     <div class="carousel">
       <div class="carousel-inner">
@@ -23,9 +19,7 @@
           <div class="card-content">
             <h2 class="card-title">Marvin McKinney</h2>
             <p class="card-description">
-              Since switching to Swift Revel, I finally have peace of mind
-              regarding my business finances. With their secure platform, I
-              trust my data's protection completely.
+              Since switching to Swift Revel, I finally have peace of mind regarding my business finances. With their secure platform, I trust my data's protection completely.
             </p>
           </div>
         </div>
@@ -34,9 +28,7 @@
           <div class="card-content">
             <h2 class="card-title">Jacob Jones</h2>
             <p class="card-description">
-              Since switching to Swift Revel, I finally have peace of mind
-              regarding my business finances. With their secure platform, I
-              trust my data's protection completely.
+              Since switching to Swift Revel, I finally have peace of mind regarding my business finances. With their secure platform, I trust my data's protection completely.
             </p>
           </div>
         </div>
@@ -45,9 +37,7 @@
           <div class="card-content">
             <h2 class="card-title">Theresa Webb</h2>
             <p class="card-description">
-              Reliable banking solutions for your financial operations Reliable
-              banking solutions for your financial operations Reliable banking
-              solutions for your financial
+              Reliable banking solutions for your financial operations Reliable banking solutions for your financial operations Reliable banking solutions for your financial
             </p>
           </div>
         </div>
@@ -56,9 +46,7 @@
           <div class="card-content">
             <h2 class="card-title">Marvin McKinney</h2>
             <p class="card-description">
-              Since switching to Swift Revel, I finally have peace of mind
-              regarding my business finances. With their secure platform, I
-              trust my data's protection completely.
+              Since switching to Swift Revel, I finally have peace of mind regarding my business finances. With their secure platform, I trust my data's protection completely.
             </p>
           </div>
         </div>
@@ -67,9 +55,7 @@
           <div class="card-content">
             <h2 class="card-title">Jacob Jones</h2>
             <p class="card-description">
-              Since switching to Swift Revel, I finally have peace of mind
-              regarding my business finances. With their secure platform, I
-              trust my data's protection completely.
+              Since switching to Swift Revel, I finally have peace of mind regarding my business finances. With their secure platform, I trust my data's protection completely.
             </p>
           </div>
         </div>
